--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,72 +1,5 @@
-<style>
-    footer {
-        background-color: #333;
-        color: #fff;
-        padding: 20px 0;
-        text-align: center;
-
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
-        padding: 20px 0;
-        text-align: center;
-    }
-
-    .footer-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 20rem;
-    }
-
-    .logo {
-        flex: 0 0 auto;
-    }
-
-    .right-section {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
-
-    .created-by,
-    .menu {
-        margin-left: 20px;
-    }
-
-    .created-by ul,
-    .menu ul {
-        /* list-style-type: none; */
-        padding: 0;
-        margin: 0;
-    }
-
-    .created-by ul li,
-    .menu ul li {
-        margin-bottom: 5px;
-    }
-
-    .right-section h4 {
-        margin-bottom: 10px;
-    }
-
-    .copyright {
-        margin-top: 20px;
-    }
-
-    .created-by {
-        margin-right: 10rem;
-    }
-
-    .menu {
-        margin-top: 1.5em;
-    }
-</style>
-
+<link rel="stylesheet" href="/static/css/footer.css" />
 <footer>
-    <link rel="stylesheet" href="foot.css" />
     <div class="footer-content">
         <div class="logo">
             <img
@@ -85,7 +18,7 @@
                     <li>진현정</li>
                 </ul>
             </div>
-            <div class="menu">
+            <div class="footerMenu">
                 <h4>메뉴</h4>
                 <ul>
                     <li>한식</li>
