--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -8,7 +8,7 @@
         <%- include('../include/head') %>
     </head>
     <body>
-        <%- include('../include/header.ejs') %>
+        <%- include('../include/header.ejs', {isLogin}) %>
         <div class="main-container">
             <div class="back-link-div">
                 <a href="/suggestion/list?page=1" class="back-link"><p>&lt;목록으로</p></a>
