--- a/views/user/idCheckForm.ejs
+++ b/views/user/idCheckForm.ejs
@@ -55,7 +55,7 @@
                 },
             })
                 .then((result) => {
-                    if (true) {
+                    if (result.data.available) {
                         console.log("사용가능");
                         alert("사용 가능한 아이디입니다.");
                         document.getElementById("cancelBtn").style.visibility = 'hidden';
