design : 헤더 사이드바 및 조정

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -217,6 +217,7 @@ header nav ul li:last-child {
     margin: 0 auto;
 }
 
+/* searchStyle */
 .searchStyle {
     display: block;
     width: 100%;
