--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/static/css/footer.css" />
 <footer>
+    <!-- footer -->
     <div class="footer-content">
         <div class="logo">
             <img
@@ -8,6 +9,7 @@
                 style="width: 200px; height: 200px"
             />
         </div>
+
         <div class="right-section">
             <div class="created-by">
                 <h4>만든 사람</h4>
