--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,7 +7,7 @@
     position: relative; /* 상대적인 위치 설정 */
     display: inline-block; /* 요소들을 인라인 블록으로 배치 */
 }
-
+/* 라벨 */
 .label {
     position: absolute; /* 절대적인 위치 설정 */
     top: 10px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
