--- a/views/suggestions/suggestionList.ejs
+++ b/views/suggestions/suggestionList.ejs
@@ -8,7 +8,7 @@
         <%- include('../include/head.ejs') %>
     </head>
     <body>
-        <%- include('../include/header.ejs', {isLogin}) %>
+        <%- include('../include/header.ejs', {isLogin, user}) %>
         <div class="main-container">
             <h2>건의사항</h2>
             <br>
