--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -8,7 +8,7 @@
         <%- include('../include/head') %>
     </head>
     <body>
-        <%- include('../include/header.ejs', {isLogin}) %>
+        <%- include('../include/header.ejs'), {isLogin, user} %>
         <div class="main-container">
             <div class="back-link-div">
                 <a href="/suggestion/list?page=1" class="back-link"><p>&lt;목록으로</p></a>
@@ -49,6 +49,7 @@
         </div>
         <%- include('../include/footer.ejs') %>
         <script>
+            console.log("<%=isLogin %>");
             function confirmDel() {
                 const isDelete = confirm("게시글을 삭제하시겠습니까?");
                 if (isDelete) {
