--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -8,22 +8,12 @@
         </div>
         <div style="margin-top: 20px; margin-left: 140px">
             <div class="search" style="width: 500px; margin-top: 0px; flex: 1">
-                <div
-                    class="collapse navbar-collapse d-flex justify-content-center"
-                    id="navbarSupportedContent"
-                >
+                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
                     <div class="d-flex" role="search" style="width: 500px">
-                        <input
-                            class="searchStyle"
-                            type="search"
-                            placeholder="search"
-                            aria-label="Search"
-                        />
+                        <input class="searchStyle" type="search" placeholder="search" aria-label="Search" />
 
                         <button class="btn" type="button" id="">
-                            <img
-                                src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png"
-                            />
+                            <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png" />
                         </button>
                     </div>
                 </div>
@@ -47,18 +37,20 @@
             <div class="buttons">
                 <!-- 로그인 유무에 따른 헤더 변경 -->
                 <%if (isLogin) { %>
-                <p><%= user %>님 환영합니다.</p>
-                <form name="form_logout" action="/form/logout" method="post">
-                    <button id="logoutBtn" class="signBtn" type="submit">로그아웃</button>
-                    <div><button class="signBtn" id="menu">마이페이지</button></div>
-                </form>
+                    <p>
+                        <%= user %>님 환영합니다.
+                    </p>
+                    <form name="form_logout" action="/form/logout" method="post">
+                        <button id="logoutBtn" class="signBtn" type="submit">로그아웃</button>
+                        <div><button class="signBtn" id="menu">마이페이지</button></div>
+                    </form>
 
-                <% } else { %>
+                    <% } else { %>
 
-                <button id="signupBtn" class="signBtn">회원가입</button>
-                <button id="loginBtn" class="signBtn">로그인</button>
-                <% } %>
-                <br />
+                        <button id="signupBtn" class="signBtn">회원가입</button>
+                        <button id="loginBtn" class="signBtn">로그인</button>
+                        <% } %>
+                            <br />
             </div>
         </div>
     </div>
@@ -71,16 +63,13 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;<span style="font-size: 20px">000님</span>
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <button
-                            id="myInfo"
-                            style="
+                        <button id="myInfo" style="
                                 border: none;
                                 background: none;
                                 font-weight: 800;
                                 font-size: 15px;
                                 text-decoration: underline;
-                            "
-                        >
+                            ">
                             내 정보
                         </button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -101,28 +90,22 @@
                 </ul>
                 <ul>
                     <li>
-                        <button
-                            id="sideMenuLikeBtn"
-                            style="
+                        <button id="sideMenuLikeBtn" style="
                                 border: none;
                                 background: none;
                                 font-weight: 800;
                                 font-size: 15px;
-                            "
-                        >
+                            ">
                             즐겨찾기
                         </button>
                     </li>
                     <li>
-                        <button
-                            id="sideMenuMyLiked"
-                            style="
+                        <button id="sideMenuMyLiked" style="
                                 border: none;
                                 background: none;
                                 font-weight: 800;
                                 font-size: 15px;
-                            "
-                        >
+                            ">
                             내가 쓴 리뷰
                         </button>
                     </li>
@@ -193,24 +176,12 @@
                         <label for="id">아이디</label>
                     </h3>
                     <span class="box intId">
-                        <input
-                            type="text"
-                            name="id"
-                            id="inputId"
-                            class="int"
-                            maxlength="20"
-                            onkeydown="inputIdCk()"
-                            required
-                        />
+                        <input type="text" name="id" id="inputId" class="int" maxlength="20" onkeydown="inputIdCk()"
+                            required />
                         <!-- 타입을 btn에서 input으로 수정 -->
                         <span class="stepbutton">
                             <button id="btnCheckId" onclick="idCheck()">중복확인</button>
-                            <input
-                                type="hidden"
-                                name="idDuplication"
-                                id="idDuplication"
-                                value="idUncheck"
-                            />
+                            <input type="hidden" name="idDuplication" id="idDuplication" value="idUncheck" />
                         </span>
                     </span>
                     <span class="error_next_box"></span>
@@ -222,14 +193,7 @@
                         <label for="pswd1">비밀번호</label>
                     </h3>
                     <span class="box intPw">
-                        <input
-                            type="password"
-                            name="pw"
-                            class="int"
-                            maxlength="20"
-                            id="pw"
-                            required
-                        />
+                        <input type="password" name="pw" class="int" maxlength="20" id="pw" required />
                         <span id="alertTxt">사용불가</span>
                     </span>
                     <span class="error_next_box"></span>
@@ -241,13 +205,7 @@
                         <label for="pswd2">비밀번호 재확인</label>
                     </h3>
                     <span class="box intPwCheck">
-                        <input
-                            type="password"
-                            name="pwCheck"
-                            class="int"
-                            maxlength="20"
-                            id="pwCk"
-                        />
+                        <input type="password" name="pwCheck" class="int" maxlength="20" id="pwCk" />
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -258,19 +216,9 @@
                         <label for="name">닉네임</label>
                     </h3>
                     <span class="box intName">
-                        <input
-                            type="text"
-                            name="nickname"
-                            class="int"
-                            maxlength="20"
-                            placeholder="7글자 이하로 작성해주세요."
-                            required
-                        />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckName">중복확인</button></span
-                        >
-                    </span>
-                    <span class="error_next_box"></span>
+                        <input type="text" name="nickname" class="int" maxlength="20" placeholder="7글자 이하로 작성해주세요."
+                            required />
+                        <span class="error_next_box"></span>
                 </div>
 
                 <!-- 이메일 -->
@@ -281,44 +229,35 @@
                         <label for="email">이메일</label>
                     </h3>
                     <span class="box intEmail">
-                        <input type="email" name="email" class="int" maxlength="100" required />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckCodeSend">확인코드전송</button></span
-                        >
+                        <input type="email" name="email" id="email" class="int" maxlength="100" required />
+                        <span class="stepbutton"><button type="button" id="btnCheckCodeSend"
+                                onclick="emailCode()">확인코드전송</button></span>
                     </span>
                     <span class="error_next_box">이메일 주소를 다시 확인해주세요.</span>
                 </div>
 
                 <!-- 이메일 확인 -->
-                <!-- 태그명, 변수명 오류 있습니다!!!!!!! 제 임의로 바꿔놓았습니다!! -->
-
                 <div>
                     <h3>
                         <label for="email">이메일 확인</label>
                     </h3>
                     <span class="box intName">
-                        <input
-                            type="email"
-                            id="emailChk"
-                            name="emailChk"
-                            class="int"
-                            maxlength="20"
-                        />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckCode">확인</button></span
-                        >
+                        <input type="text" id="emailChk" name="emailChk" class="int" maxlength="20" required/>
+                        <span class="stepbutton"><button type="button" id="btnCheckCode"
+                                onclick="btnEmailCk()">확인</button></span>
                     </span>
                     <span class="error_next_box"></span>
                 </div>
                 <!-- 회원가입-->
                 <div class="btnArea">
-                    <button type="submit" id="btnJoin">
+                    <button type="submit" id="btnJoin" onclick="btnJoin()">
                         <span>가입하기</span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
+
 
     <!-- 비밀번호 재확인 부분 -->
     <script>
@@ -332,10 +271,10 @@
                 pwCk.setCustomValidity("");
             }
         }
-
         pw.onchange = validatePassword;
         pwCk.onkeyup = validatePassword;
     </script>
+
 
     <!-- 아이디 중복화면 검사 -->
     <script>
@@ -351,6 +290,78 @@
         // 중복체크 후 다시 새로운 아이디를 입력했을 때 다시 중복체크 하도록 함
         function inputIdCk() {
             document.modal_register.idDuplication.value = "idUncheck";
+        }
+    </script>
+
+    <!-- 이메일 확인 코드 전송 -->
+
+    <script>
+        function emailCode() {
+            const emailInput = document.getElementById("email");
+            const emailValue = emailInput.value;
+
+            axios({
+                method: 'POST',
+                url: '/form/sendCode',
+                data: {
+                    email: emailValue
+                }
+            })
+                .then((response) => {
+                    console.log("res 작동 확인", response.data); 
+
+                    if (response.data.ok) {
+                        alert("메일 전송에 성공하였습니다.");
+                        // btnEmailCk();
+                    } else {
+                        alert("메일 전송에 실패하였습니다.");
+                        emailChk.value = '';
+                    }
+                })
+
+                .catch((error) => {
+                    console.error(error); 
+                });
+        }
+
+        // function btnEmailCk() {
+        //     const emailChk = document.getElementById("emailChk");
+        //     const codeValue = emailChk.value;
+        //     console.log("인증코드입니다아아아아아아", response.data.number);
+
+        //     if (codeValue === response.data.number) {
+        //         alert("인증번호가 일치합니다.");
+        //     } else {
+        //         alert("인증번호가 일치하지 않습니다.");
+        //         emailChk.value = '';
+        //     }
+        // }
+    </script>
+
+    <!-- 이메일 코드 확인 -->
+    <script>
+        function btnEmailCk() {
+            const emailChk = document.getElementById("emailChk");
+            const codeValue = emailChk.value;
+
+            axios({
+                method: 'POST',
+                url: '/form/checkCode', 
+                data: {
+                    codeValue: codeValue, 
+                }
+            })
+            .then((response) => {
+                    if (response.data.ok) {
+                        alert("인증번호가 일치합니다.");
+                    } else {
+                        alert("인증번호가 일치하지 않습니다.");
+                        emailChk.value = '';
+                    }
+                })
+                .catch((error) => {
+                    console.error(error);
+                });
         }
     </script>
 
