--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
                     </td>
                     <td>
                         <div class="imageContainer">
-                            <a href="/restaurantDetail/1"
+                            <a href="/restaurantDetail/<%=1%>"
                                 ><img
                                     src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAyMjdfNDIg%2FMDAxNzA5MDIwMjU4OTcw.qG10KBRjb5s5nW8wURjDutMlp3ycNkA3QKoI8FQX4awg.2CLBY56L0C_QtPsYcUvQaABg-7F04azYXkKvIWwiy9Qg.JPEG%2F20240227_144325.jpg.jpg"
                                     alt="Restaurant 3"
