--- a/static/css/restDetail.css
+++ b/static/css/restDetail.css
@@ -2,11 +2,12 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 200px;
 }
 
 .rest {
     display: flex;
-    width: 1200px;
+    width: 1350px;
     height: 400px;
     margin: 50px 0;
     border-radius: 25px;
@@ -14,15 +15,22 @@ main {
 .restImg {
     width: 400px;
     height: 400px;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScXpE_0Ni9xnQquNo5TZmqxaihVCcOUZVdWQ&usqp=CAU");
-    background-repeat: no-repeat;
-    background-size: cover;
     border-radius: 25px;
     margin-right: 16px;
 }
 
+.restImg img {
+    width: 400px;
+    height: 400px;
+    border-radius: 25px;
+}
+
+.restDes {
+    margin-top: 20px;
+}
+
 .restInfo {
-    width: 800px;
+    width: 950px;
     display: flex;
     flex-direction: column;
 }
@@ -38,9 +46,22 @@ main {
     margin-right: 15px;
 }
 
+.fa-heart:hover {
+    cursor: pointer;
+}
+
 .otherInfo {
     display: flex;
     justify-content: space-between;
+}
+
+.otherInfo .menu {
+    width: 400px;
+    text-align: center;
+}
+
+.otherInfo .menu ul {
+    list-style: none;
 }
 
 .maps {
@@ -49,30 +70,40 @@ main {
 }
 
 .address {
-    width: 1200px;
+    width: 1350px;
     text-align: center;
 }
 
 #map {
-    width: 1200px;
+    width: 1350px;
     height: 400px;
     border-radius: 25px;
 }
 
 .reviewAll {
     margin-top: 40px;
-    width: 1200px;
-    height: 1500px;
+    width: 1350px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #ffde59;
     border-radius: 25px;
+    padding-bottom: 80px;
+    margin-bottom: 50px;
+}
+
+.reviewAll h2 {
+    margin: 10px 0px;
 }
 
 .reviews {
     display: flex;
     flex-direction: column;
+}
+
+.reviewCount {
+    margin-right: 10px;
 }
 
 .rating {
@@ -94,7 +125,7 @@ main {
     padding: 10px;
 }
 
-.review .reviewOne .reviewRating {
+.review .reviewTitle .reviewRating {
     margin-left: 10px;
 }
 
@@ -119,4 +150,8 @@ main {
 
 .createReview button {
     border-radius: 25px;
+}
+
+.rating span:hover {
+    cursor: pointer;
 }
